--- a/CSS/Redes Sociales/css/style.css
+++ b/CSS/Redes Sociales/css/style.css
@@ -13,9 +13,9 @@
 /**
 * Mixin for image replacement
 */
-/* ===================
-    ALL: Fonts
-=================== */
+/* ==========================
+    Column main definition
+=============================*/
 
 .main-container {
   margin: 25px;
@@ -33,6 +33,9 @@
     margin: 50px;
 }
 
+/* ==========================================================================
+   Independent Columns
+   ========================================================================== */
 .facebook  {
     font-family: 'Courier New', Courier, monospace;
     background-color: rgba(0, 0, 255, 0.815);
@@ -64,6 +67,10 @@
     margin-left: 100px;
     bottom: 20px;
 }
+
+/* ==========================================================================
+   Icon Style
+   ========================================================================== */
 
 a  {
     color: rgb(253, 253, 253);
