Responsive social media assignment

--- a/CSS/Redes Sociales/css/style.css
+++ b/CSS/Redes Sociales/css/style.css
@@ -17,10 +17,6 @@
     Column main definition
 =============================*/
 
-h1  {
-  text-align: center;
-}
-
 .main-container {
   margin: 25px;
   border: 25px;
@@ -28,33 +24,21 @@ h1  {
   content: 25px;
 }
 
-.column  {
-    position: relative;
-    float: left;
-	width: 20%;
-	padding: 10px;
-    height: 300px;
-    margin: 50px;
-}
 
 /* ==========================================================================
-   Independent Columns
+   Independent Columns fonts
    ========================================================================== */
 .facebook  {
     font-family: 'Courier New', Courier, monospace;
-    background-color: rgba(0, 0, 255, 0.815);
-
 }
 
 .twitter  {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgb(0, 174, 255); 
 }
 
 
 .instagram  {
     font-family: 'Nunito', sans-serif;  
-    background-color: rgba(165, 77, 42, 0.815); 
 }
 
 .fab  {
@@ -78,3 +62,104 @@ a:hover  {
 
 }
 
+/* ==========================================================================
+   Media Queries
+   ========================================================================== */
+
+
+/* =====================
+   Mobile phones
+  ====================*/ 
+@media only screen and (max-width: 768px) {
+    .column {
+      position: relative;
+      width: 50%;
+      padding: 10%;
+      height: 20%;
+      margin: 10%;
+      content: 10%;
+    }
+
+    .tittle  {
+        width: 100%;
+        text-align: center;
+    }
+
+    .facebook  {
+        background-color: #27782d;
+    }
+
+    .twitter  {
+        background-color: #f42929;
+    }
+
+    .instagram  {
+        background-color: #782740;
+    }
+
+  }
+
+
+/* =====================
+   Mobile tablets
+   ====================*/
+@media only screen and (min-width: 600px) {
+    .column  {
+        position: relative;
+        float: left;
+        width: 20%;
+        padding: 10px;
+        height: 300px;
+        margin: 50px;
+    }
+
+    .tittle  {
+        width: 100%;
+        text-align: center;
+    }
+
+    .facebook  {
+        background-color: rgba(0, 0, 255, 0.815);
+    }
+
+    .twitter  {
+        background-color: rgb(0, 174, 255); 
+    }
+
+    .instagram  {
+        background-color: rgba(165, 77, 42, 0.815); 
+    }
+    
+  }
+
+/* =====================
+   Mobile phones
+   ====================*/
+   @media only screen and (min-width: 768px) {
+    .column  {
+        position: relative;
+        float: left;
+        width: 20%;
+        padding: 10px;
+        height: 300px;
+        margin: 50px;
+    }
+
+    .tittle  {
+        width: 100%;
+        text-align: center;
+    }
+
+    .facebook  {
+        background-color: rgba(0, 0, 255, 0.815);
+    }
+
+    .twitter  {
+        background-color: rgb(0, 174, 255); 
+    }
+
+    .instagram  {
+        background-color: rgba(165, 77, 42, 0.815); 
+    }
+   
+  }
