--- a/SCSS/Run Forest Run/app/css/style.css
+++ b/SCSS/Run Forest Run/app/css/style.css
@@ -432,17 +432,18 @@ body {
   }
   /* line 225, ../scss/partials/_media-queries.scss */
   .footer__block p {
+    margin-left: 10%;
     margin-top: 5%;
-    width: 100%;
-    height: 28px;
+    width: 50%;
     top: 5%;
     font-family: Arial;
-    font-size: 12px;
+    font-size: 90%;
     line-height: normal;
     color: #FFFFFF;
   }
   /* line 239, ../scss/partials/_media-queries.scss */
   .footer__block h5 {
+    margin-left: 10%;
     font-family: Arial;
     font-size: 12px;
     line-height: normal;
@@ -451,88 +452,190 @@ body {
   }
 }
 /* =====================
- Desktop
- ====================*/
-@media only screen and (min-width: 768px) {
-  /* line 256, ../scss/partials/_media-queries.scss */
-  .header-container {
-    position: absolute;
-    height: 77px;
-    left: 0%;
-    right: 0%;
-    top: 0px;
+   Mobile tablets
+   ====================*/
+@media only screen and (max-width: 1024px) {
+  /* line 255, ../scss/partials/_media-queries.scss */
+  .header__block {
+    height: 50%;
+    top: 100px;
     background: #000000;
   }
+  /* line 260, ../scss/partials/_media-queries.scss */
+  .header__block li {
+    display: none;
+  }
 
-  /* line 266, ../scss/partials/_media-queries.scss */
-  .main-block {
-    position: absolute;
-    width: 1280px;
-    height: 500px;
-    left: 0px;
-    top: 77px;
+  /* line 265, ../scss/partials/_media-queries.scss */
+  .main__block {
+    height: 304px;
+    margin-top: -40%;
+    background-image: url("../img/banner.png");
+    background-size: 100%;
   }
-  /* line 273, ../scss/partials/_media-queries.scss */
-  .main-block h1 {
-    position: absolute;
-    width: 591px;
-    height: 42px;
-    left: calc(50% - 591px/2 - 252.5px);
-    top: calc(50% - 42px/2 - 287.5px);
+  /* line 271, ../scss/partials/_media-queries.scss */
+  .main__block h1 {
+    top: 100%;
+    position: sticky;
+    margin-top: 33%;
+    margin-left: 10%;
+    width: 50%;
     font-family: Arial;
-    font-size: 36px;
+    font-size: 150%;
     line-height: normal;
-    color: #FFFFFF;
+    color: white;
   }
-  /* line 287, ../scss/partials/_media-queries.scss */
-  .main-block .search {
+
+  /* line 286, ../scss/partials/_media-queries.scss */
+  .search__block {
     position: absolute;
-    height: 44px;
-    left: 7.42%;
-    right: 50.55%;
-    top: 382px;
+    top: 40%;
+    margin-left: 10%;
+    width: 90%;
+  }
+  /* line 291, ../scss/partials/_media-queries.scss */
+  .search__block .search {
     background: #FFFFFF;
     border: 1px solid #8E8E8E;
     box-sizing: border-box;
     border-radius: 20px;
-  }
-
-  /* line 302, ../scss/partials/_media-queries.scss */
-  .film__block {
-    position: absolute;
-    top: 46.95%;
-    bottom: 0%;
-    background: #FFFFFF;
-  }
-  /* line 309, ../scss/partials/_media-queries.scss */
-  .film__block .film {
-    position: absolute;
-    width: 360px;
-    height: 242px;
-    left: 68px;
-    top: 633px;
-    background: #FFFFFF;
-  }
-  /* line 318, ../scss/partials/_media-queries.scss */
-  .film__block h2 {
-    /*font*/
+    width: 80%;
+    height: 5%;
+    left: 10%;
+    top: 65%;
     font-family: Arial;
     font-size: 18px;
     line-height: normal;
-    /* Line */
+    color: #8E8E8E;
+  }
+  /* line 306, ../scss/partials/_media-queries.scss */
+  .search__block .image {
     position: absolute;
-    width: 313px;
-    height: 0px;
-    left: 23px;
-    top: 574px;
+    width: 23px;
+    height: 23px;
+    right: 50px;
+    top: 66%;
+    margin-right: 15%;
+  }
+
+  /* line 317, ../scss/partials/_media-queries.scss */
+  .agent__block {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 2%;
+  }
+  /* line 321, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent {
+    background: #FFFFFF;
+    margin-top: 9%;
+  }
+  /* line 324, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .agent {
+    /*font*/
+    margin-left: 5%;
+    font-family: Arial;
+    font-size: 18px;
+    line-height: normal;
     /* borde-light */
-    border: 1px solid #D8D8D8;
+    border-bottom: 1px solid #D8D8D8;
+  }
+  /* line 334, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .agent .certified {
+    margin-left: 40%;
+    left: 60%;
+    right: 14.03%;
+    top: 4.96%;
+    bottom: 42.12%;
+    border-bottom-color: #000000;
+  }
+  /* line 345, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent p {
+    margin-left: 10%;
+    width: 80%;
+    height: 50%;
+    left: 164px;
+    top: 583px;
+    font-family: Arial;
+    font-size: 95%;
+    line-height: normal;
+    text-align: justify;
+    color: #000000;
+  }
+  /* line 346, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent p .image {
+    float: left;
+    width: 126px;
+    height: 167px;
+  }
+  /* line 366, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .footer__agent {
+    display: flex;
+    margin-top: 5%;
+  }
+  /* line 369, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .footer__agent .btn {
+    margin-left: 10%;
+    margin-right: 15%;
+    background: #000000;
+    border-radius: 18px;
+    width: 30%;
+    left: 150%;
+    top: 300%;
+    font-family: Arial;
+    font-size: 100%;
+    line-height: normal;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  /* line 384, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .footer__agent h2 {
+    margin-left: 10%;
+    margin-top: 5%;
+    height: 17px;
+    left: 23px;
+    top: 720px;
+    font-family: Arial;
+    font-size: 90%;
+    line-height: normal;
+    color: #000000;
+  }
+
+  /* line 402, ../scss/partials/_media-queries.scss */
+  .footer__block {
+    margin-top: 10%;
+    width: 100%;
+    height: 88px;
+    left: 0px;
+    top: 1054px;
+    background: #000000;
+    display: flex;
+  }
+  /* line 412, ../scss/partials/_media-queries.scss */
+  .footer__block p {
+    margin-left: 10%;
+    margin-top: 5%;
+    width: 50%;
+    top: 5%;
+    font-family: Arial;
+    font-size: 70%;
+    line-height: normal;
+    color: #FFFFFF;
+  }
+  /* line 425, ../scss/partials/_media-queries.scss */
+  .footer__block h5 {
+    margin-left: 10%;
+    margin-top: 5%;
+    font-family: Arial;
+    font-size: 70% x;
+    line-height: normal;
+    text-decoration-line: underline;
+    color: #FFFFFF;
   }
 }
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
-/* line 348, ../scss/partials/_media-queries.scss */
+/* line 447, ../scss/partials/_media-queries.scss */
 nav a {
   float: left;
   width: 27%;
@@ -540,11 +643,11 @@ nav a {
   padding: 25px 2%;
   margin-bottom: 0;
 }
-/* line 356, ../scss/partials/_media-queries.scss */
+/* line 455, ../scss/partials/_media-queries.scss */
 nav li:first-child a {
   margin-left: 0;
 }
-/* line 360, ../scss/partials/_media-queries.scss */
+/* line 459, ../scss/partials/_media-queries.scss */
 nav li:last-child a {
   margin-right: 0;
 }
@@ -552,12 +655,12 @@ nav li:last-child a {
 /* ========================
     INTERMEDIATE: IE Fixes
    ======================== */
-/* line 369, ../scss/partials/_media-queries.scss */
+/* line 468, ../scss/partials/_media-queries.scss */
 nav ul li {
   display: inline;
 }
 
-/* line 373, ../scss/partials/_media-queries.scss */
+/* line 472, ../scss/partials/_media-queries.scss */
 .oldie nav a {
   margin: 0 0.7%;
 }
@@ -566,7 +669,7 @@ nav ul li {
   /* ====================
       WIDE: CSS3 Effects
      ==================== */
-  /* line 384, ../scss/partials/_media-queries.scss */
+  /* line 483, ../scss/partials/_media-queries.scss */
   .header-container,
   .main aside {
     -webkit-box-shadow: 0 5px 10px #aaa;
@@ -577,12 +680,12 @@ nav ul li {
   /* ============
       WIDE: Menu
      ============ */
-  /* line 395, ../scss/partials/_media-queries.scss */
+  /* line 494, ../scss/partials/_media-queries.scss */
   .title {
     float: left;
   }
 
-  /* line 399, ../scss/partials/_media-queries.scss */
+  /* line 498, ../scss/partials/_media-queries.scss */
   nav {
     float: right;
     width: 38%;
@@ -591,12 +694,12 @@ nav ul li {
   /* ============
       WIDE: Main
      ============ */
-  /* line 409, ../scss/partials/_media-queries.scss */
+  /* line 508, ../scss/partials/_media-queries.scss */
   .main article {
     float: left;
     width: 57%;
   }
-  /* line 414, ../scss/partials/_media-queries.scss */
+  /* line 513, ../scss/partials/_media-queries.scss */
   .main aside {
     float: right;
     width: 28%;
@@ -606,7 +709,7 @@ nav ul li {
   /* ===============
       Maximal Width
      =============== */
-  /* line 427, ../scss/partials/_media-queries.scss */
+  /* line 526, ../scss/partials/_media-queries.scss */
   .wrapper {
     width: 1026px;
     /* 1140px - 10% for margins */
@@ -617,7 +720,7 @@ nav ul li {
    Print styles
    ========================================================================== */
 @media print {
-  /* line 438, ../scss/partials/_media-queries.scss */
+  /* line 537, ../scss/partials/_media-queries.scss */
   * {
     background: transparent !important;
     color: #000 !important;
@@ -626,18 +729,18 @@ nav ul li {
     text-shadow: none !important;
   }
 
-  /* line 445, ../scss/partials/_media-queries.scss */
+  /* line 544, ../scss/partials/_media-queries.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 450, ../scss/partials/_media-queries.scss */
+  /* line 549, ../scss/partials/_media-queries.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 454, ../scss/partials/_media-queries.scss */
+  /* line 553, ../scss/partials/_media-queries.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -645,33 +748,33 @@ nav ul li {
   /*
    * Don't show links for images, or javascript/internal links
    */
-  /* line 462, ../scss/partials/_media-queries.scss */
+  /* line 561, ../scss/partials/_media-queries.scss */
   .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
     content: "";
   }
 
-  /* line 468, ../scss/partials/_media-queries.scss */
+  /* line 567, ../scss/partials/_media-queries.scss */
   pre,
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
   }
 
-  /* line 474, ../scss/partials/_media-queries.scss */
+  /* line 573, ../scss/partials/_media-queries.scss */
   thead {
     display: table-header-group;
     /* h5bp.com/t */
   }
 
-  /* line 478, ../scss/partials/_media-queries.scss */
+  /* line 577, ../scss/partials/_media-queries.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 483, ../scss/partials/_media-queries.scss */
+  /* line 582, ../scss/partials/_media-queries.scss */
   img {
     max-width: 100% !important;
   }
@@ -679,7 +782,7 @@ nav ul li {
   @page {
     margin: 0.5cm;
   }
-  /* line 491, ../scss/partials/_media-queries.scss */
+  /* line 590, ../scss/partials/_media-queries.scss */
   p,
   h2,
   h3 {
@@ -687,7 +790,7 @@ nav ul li {
     widows: 3;
   }
 
-  /* line 498, ../scss/partials/_media-queries.scss */
+  /* line 597, ../scss/partials/_media-queries.scss */
   h2,
   h3 {
     page-break-after: avoid;
