--- a/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
@@ -223,13 +223,13 @@
     background: #000000;
 
       p  {
+        margin-left: 10%;
         margin-top: 5%;
-        width: 100%;
-        height: 28px;
+        width: 50%;
         top: 5%;
         
         font-family: Arial;
-        font-size: 12px;
+        font-size: 90%;
         line-height: normal;
         
         color: #FFFFFF;   
@@ -237,6 +237,7 @@
       }
 
       h5  {
+        margin-left: 10%;
         font-family: Arial;
         font-size: 12px;
         line-height: normal;
@@ -246,93 +247,191 @@
   }
 }
 
-
-
-  /* =====================
-   Desktop
+/* =====================
+   Mobile tablets
    ====================*/
-   @media only screen and (min-width: 768px) {
+   @media only screen and (max-width : 1024px) {
 
-    .header-container  {
-        position: absolute;
-        height: 77px;
-        left: 0%;
-        right: 0%;
-        top: 0px;
+    .header__block  {
+        height: 50%;
+        top: 100px;
         background: #000000;
+
+        li {
+            display: none
+        }
     }
 
-
-    .main-block  {
-        position: absolute;
-        width: 1280px;
-        height: 500px;
-        left: 0px;
-        top: 77px;
+    .main__block  {
+        height: 304px;
+        margin-top: -40%;
+        background-image: url("../img/banner.png");
+        background-size: 100%;
     
         h1  {
-            position: absolute;
-            width: 591px;
-            height: 42px;
-            left: calc(50% - 591px/2 - 252.5px);
-            top: calc(50% - 42px/2 - 287.5px);
-            
+            top: 100%;
+            position: sticky;
+            margin-top: 33%;
+            margin-left: 10%;
+            width: 50%;
             font-family: Arial;
-            font-size: 36px;
+            font-size: 150%;
             line-height: normal;
             
-            color: #FFFFFF;   
+            color: white;   
         }
     
-        .search {
-            position: absolute;
-            height: 44px;
-            left: 7.42%;
-            right: 50.55%;
-            top: 382px;
-            
+    }
+
+    .search__block  {
+        position: absolute;
+        top: 40%;
+        margin-left: 10%;
+        width: 90%;
+        .search  {
             background: #FFFFFF;
             border: 1px solid #8E8E8E;
             box-sizing: border-box;
-            border-radius: 20px; 
-    
-        }
-    }
-    
-    .film__block  {
-        position: absolute;
-        top: 46.95%;
-        bottom: 0%;
-    
-        background: #FFFFFF;  
-    
-        .film  {
-            position: absolute;
-            width: 360px;
-            height: 242px;
-            left: 68px;
-            top: 633px;
-            background: #FFFFFF;
-        }
-
-        h2  {
-            /*font*/
+            border-radius: 20px;
+            width: 80%;
+            height: 5%;
+            left: 10%;
+            top: 65%;
             font-family: Arial;
             font-size: 18px;
             line-height: normal;
-
-            /* Line */
-            position: absolute;
-            width: 313px;
-            height: 0px;
-            left: 23px;
-            top: 574px;
-
-            /* borde-light */
-            border: 1px solid #D8D8D8;
+            color: #8E8E8E;
         }
 
+        .image  {
+            position: absolute;
+            width: 23px;
+            height: 23px;
+            right: 50px;
+            top: 66%;
+            margin-right: 15%;
+        }
+
+     }
+
+    .agent__block  {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-top: 2%;
+        .single__agent  {
+            background: #FFFFFF;  
+            margin-top: 9%;
+            .agent  {
+                /*font*/
+                margin-left: 5%;
+                font-family: Arial;
+                font-size: 18px;
+                line-height: normal;
+
+                /* borde-light */
+                border-bottom: 1px solid #D8D8D8;
+
+                .certified  {
+                    margin-left: 40%;
+                    left: 60%;
+                    right: 14.03%;
+                    top: 4.96%;
+                    bottom: 42.12%;
+                    border-bottom-color: #000000;
+                }
+            }
+
+
+            p  {
+                .image  {
+                    float: left;
+                    width: 126px;
+                    height: 167px;
+                }
+                margin-left: 10%;
+                width: 80%;
+                height: 50%;
+                left: 164px;
+                top: 583px;
+
+                font-family: Arial;
+                font-size: 95%;
+                line-height: normal;
+                text-align: justify;
+
+                color: #000000;
+
+            }
+
+            .footer__agent  {
+                display:flex;
+                margin-top: 5%;
+                .btn  {
+                    margin-left: 10%;
+                    margin-right: 15%;
+                    background: #000000;
+                    border-radius: 18px;
+                    width: 30%;
+                    left: 150%;
+                    top: 300%;
+                    font-family: Arial;
+                    font-size: 100%;
+                    line-height: normal;
+                    text-align: center;
+                    color: #FFFFFF;
+                }
+        
+                h2  {
+                    margin-left: 10%;
+                    margin-top: 5%;
+                    height: 17px;
+                    left: 23px;
+                    top: 720px;
+
+                    font-family: Arial;
+                    font-size: 90%;
+                    line-height: normal;
+        
+                    color: #000000;
+                }
+
+            }
+        }
     }
+
+  .footer__block  {
+    margin-top: 10%;
+    width: 100%;
+    height: 88px;
+    left: 0px;
+    top: 1054px;
+    
+    background: #000000;
+    display: flex;
+
+      p  {
+        margin-left: 10%;
+        margin-top: 5%;
+        width: 50%;
+        top: 5%;
+        
+        font-family: Arial;
+        font-size: 70%;
+        line-height: normal;
+        color: #FFFFFF;   
+
+      }
+
+      h5  {
+        margin-left: 10%;
+        margin-top: 5%;
+        font-family: Arial;
+        font-size: 70%x;
+        line-height: normal;
+        text-decoration-line: underline;
+        color: #FFFFFF;
+      }
+  }
 
   }
 
