--- a/SCSS/Run Forest Run/app/css/style.css
+++ b/SCSS/Run Forest Run/app/css/style.css
@@ -472,8 +472,9 @@ body {
     margin-top: -40%;
     background-image: url("../img/banner.png");
     background-size: 100%;
+    background-repeat: no-repeat;
   }
-  /* line 271, ../scss/partials/_media-queries.scss */
+  /* line 272, ../scss/partials/_media-queries.scss */
   .main__block h1 {
     top: 100%;
     position: sticky;
@@ -486,14 +487,14 @@ body {
     color: white;
   }
 
-  /* line 286, ../scss/partials/_media-queries.scss */
+  /* line 287, ../scss/partials/_media-queries.scss */
   .search__block {
     position: absolute;
     top: 40%;
     margin-left: 10%;
     width: 90%;
   }
-  /* line 291, ../scss/partials/_media-queries.scss */
+  /* line 292, ../scss/partials/_media-queries.scss */
   .search__block .search {
     background: #FFFFFF;
     border: 1px solid #8E8E8E;
@@ -508,7 +509,7 @@ body {
     line-height: normal;
     color: #8E8E8E;
   }
-  /* line 306, ../scss/partials/_media-queries.scss */
+  /* line 307, ../scss/partials/_media-queries.scss */
   .search__block .image {
     position: absolute;
     width: 23px;
@@ -518,18 +519,18 @@ body {
     margin-right: 15%;
   }
 
-  /* line 317, ../scss/partials/_media-queries.scss */
+  /* line 318, ../scss/partials/_media-queries.scss */
   .agent__block {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-top: 2%;
   }
-  /* line 321, ../scss/partials/_media-queries.scss */
+  /* line 322, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent {
     background: #FFFFFF;
     margin-top: 9%;
   }
-  /* line 324, ../scss/partials/_media-queries.scss */
+  /* line 325, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent .agent {
     /*font*/
     margin-left: 5%;
@@ -539,7 +540,7 @@ body {
     /* borde-light */
     border-bottom: 1px solid #D8D8D8;
   }
-  /* line 334, ../scss/partials/_media-queries.scss */
+  /* line 335, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent .agent .certified {
     margin-left: 40%;
     left: 60%;
@@ -548,7 +549,7 @@ body {
     bottom: 42.12%;
     border-bottom-color: #000000;
   }
-  /* line 345, ../scss/partials/_media-queries.scss */
+  /* line 346, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent p {
     margin-left: 10%;
     width: 80%;
@@ -561,18 +562,18 @@ body {
     text-align: justify;
     color: #000000;
   }
-  /* line 346, ../scss/partials/_media-queries.scss */
+  /* line 347, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent p .image {
     float: left;
     width: 126px;
     height: 167px;
   }
-  /* line 366, ../scss/partials/_media-queries.scss */
+  /* line 367, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent .footer__agent {
     display: flex;
     margin-top: 5%;
   }
-  /* line 369, ../scss/partials/_media-queries.scss */
+  /* line 370, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent .footer__agent .btn {
     margin-left: 10%;
     margin-right: 15%;
@@ -587,7 +588,7 @@ body {
     text-align: center;
     color: #FFFFFF;
   }
-  /* line 384, ../scss/partials/_media-queries.scss */
+  /* line 385, ../scss/partials/_media-queries.scss */
   .agent__block .single__agent .footer__agent h2 {
     margin-left: 10%;
     margin-top: 5%;
@@ -595,12 +596,12 @@ body {
     left: 23px;
     top: 720px;
     font-family: Arial;
-    font-size: 90%;
+    font-size: 70%;
     line-height: normal;
     color: #000000;
   }
 
-  /* line 402, ../scss/partials/_media-queries.scss */
+  /* line 403, ../scss/partials/_media-queries.scss */
   .footer__block {
     margin-top: 10%;
     width: 100%;
@@ -610,7 +611,7 @@ body {
     background: #000000;
     display: flex;
   }
-  /* line 412, ../scss/partials/_media-queries.scss */
+  /* line 413, ../scss/partials/_media-queries.scss */
   .footer__block p {
     margin-left: 10%;
     margin-top: 5%;
@@ -621,7 +622,195 @@ body {
     line-height: normal;
     color: #FFFFFF;
   }
-  /* line 425, ../scss/partials/_media-queries.scss */
+  /* line 426, ../scss/partials/_media-queries.scss */
+  .footer__block h5 {
+    margin-left: 10%;
+    margin-top: 5%;
+    font-family: Arial;
+    font-size: 70% x;
+    line-height: normal;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+  }
+}
+/* =====================
+ Desktop
+ ====================*/
+@media only screen and (min-width: 1224px) {
+  /* line 444, ../scss/partials/_media-queries.scss */
+  header {
+    background: #000000;
+  }
+  /* line 446, ../scss/partials/_media-queries.scss */
+  header nav {
+    height: 75px;
+  }
+  /* line 448, ../scss/partials/_media-queries.scss */
+  header nav a {
+    height: 5px;
+  }
+
+  /* line 457, ../scss/partials/_media-queries.scss */
+  .main__block {
+    margin-top: -36%;
+    width: 1280px;
+    height: 500px;
+    left: 0px;
+    top: 77px;
+    background-image: url("../img/banner.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+  /* line 467, ../scss/partials/_media-queries.scss */
+  .main__block h1 {
+    top: 100%;
+    position: sticky;
+    margin-top: 33%;
+    margin-left: 10%;
+    width: 50%;
+    font-family: Arial;
+    font-size: 150%;
+    line-height: normal;
+    color: white;
+  }
+
+  /* line 482, ../scss/partials/_media-queries.scss */
+  .search__block {
+    position: absolute;
+    top: 150%;
+    margin-left: 10%;
+    width: 50%;
+  }
+  /* line 487, ../scss/partials/_media-queries.scss */
+  .search__block .search {
+    text-indent: 15px;
+    background: #FFFFFF;
+    border: 1px solid #8E8E8E;
+    box-sizing: border-box;
+    border-radius: 20px;
+    width: 80%;
+    height: 5%;
+    left: 10%;
+    top: 65%;
+    font-family: Arial;
+    font-size: 18px;
+    line-height: normal;
+    color: #8E8E8E;
+  }
+  /* line 503, ../scss/partials/_media-queries.scss */
+  .search__block .image {
+    position: absolute;
+    width: 23px;
+    height: 23px;
+    right: 50px;
+    top: 2%;
+    margin-right: 15%;
+  }
+
+  /* line 513, ../scss/partials/_media-queries.scss */
+  .agent__block {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 2%;
+  }
+  /* line 517, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent {
+    background: #FFFFFF;
+    margin-top: 9%;
+  }
+  /* line 520, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .agent {
+    /*font*/
+    margin-left: 5%;
+    font-family: Arial;
+    font-size: 18px;
+    line-height: normal;
+    /* borde-light */
+    border-bottom: 1px solid #D8D8D8;
+  }
+  /* line 530, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .agent .certified {
+    margin-left: 40%;
+    left: 60%;
+    right: 14.03%;
+    top: 4.96%;
+    bottom: 42.12%;
+    border-bottom-color: #000000;
+  }
+  /* line 541, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent p {
+    margin-left: 10%;
+    width: 80%;
+    height: 50%;
+    left: 164px;
+    top: 583px;
+    font-family: Arial;
+    font-size: 95%;
+    line-height: normal;
+    text-align: justify;
+    color: #000000;
+  }
+  /* line 542, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent p .image {
+    float: left;
+    width: 126px;
+    height: 167px;
+  }
+  /* line 562, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .footer__agent {
+    display: flex;
+    margin-top: 5%;
+  }
+  /* line 565, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .footer__agent .btn {
+    margin-left: 10%;
+    margin-right: 15%;
+    background: #000000;
+    border-radius: 18px;
+    width: 30%;
+    left: 150%;
+    top: 300%;
+    font-family: Arial;
+    font-size: 100%;
+    line-height: normal;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  /* line 580, ../scss/partials/_media-queries.scss */
+  .agent__block .single__agent .footer__agent h2 {
+    margin-left: 10%;
+    margin-top: 5%;
+    height: 17px;
+    left: 23px;
+    top: 720px;
+    font-family: Arial;
+    font-size: 70%;
+    line-height: normal;
+    color: #000000;
+  }
+
+  /* line 598, ../scss/partials/_media-queries.scss */
+  .footer__block {
+    margin-top: 10%;
+    width: 100%;
+    height: 88px;
+    left: 0px;
+    top: 1054px;
+    background: #000000;
+    display: flex;
+  }
+  /* line 608, ../scss/partials/_media-queries.scss */
+  .footer__block p {
+    margin-left: 10%;
+    margin-top: 5%;
+    width: 50%;
+    top: 5%;
+    font-family: Arial;
+    font-size: 70%;
+    line-height: normal;
+    color: #FFFFFF;
+  }
+  /* line 621, ../scss/partials/_media-queries.scss */
   .footer__block h5 {
     margin-left: 10%;
     margin-top: 5%;
@@ -635,7 +824,7 @@ body {
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
-/* line 447, ../scss/partials/_media-queries.scss */
+/* line 644, ../scss/partials/_media-queries.scss */
 nav a {
   float: left;
   width: 27%;
@@ -643,11 +832,11 @@ nav a {
   padding: 25px 2%;
   margin-bottom: 0;
 }
-/* line 455, ../scss/partials/_media-queries.scss */
+/* line 652, ../scss/partials/_media-queries.scss */
 nav li:first-child a {
   margin-left: 0;
 }
-/* line 459, ../scss/partials/_media-queries.scss */
+/* line 656, ../scss/partials/_media-queries.scss */
 nav li:last-child a {
   margin-right: 0;
 }
@@ -655,12 +844,12 @@ nav li:last-child a {
 /* ========================
     INTERMEDIATE: IE Fixes
    ======================== */
-/* line 468, ../scss/partials/_media-queries.scss */
+/* line 665, ../scss/partials/_media-queries.scss */
 nav ul li {
   display: inline;
 }
 
-/* line 472, ../scss/partials/_media-queries.scss */
+/* line 669, ../scss/partials/_media-queries.scss */
 .oldie nav a {
   margin: 0 0.7%;
 }
@@ -669,7 +858,7 @@ nav ul li {
   /* ====================
       WIDE: CSS3 Effects
      ==================== */
-  /* line 483, ../scss/partials/_media-queries.scss */
+  /* line 680, ../scss/partials/_media-queries.scss */
   .header-container,
   .main aside {
     -webkit-box-shadow: 0 5px 10px #aaa;
@@ -680,12 +869,12 @@ nav ul li {
   /* ============
       WIDE: Menu
      ============ */
-  /* line 494, ../scss/partials/_media-queries.scss */
+  /* line 691, ../scss/partials/_media-queries.scss */
   .title {
     float: left;
   }
 
-  /* line 498, ../scss/partials/_media-queries.scss */
+  /* line 695, ../scss/partials/_media-queries.scss */
   nav {
     float: right;
     width: 38%;
@@ -694,12 +883,12 @@ nav ul li {
   /* ============
       WIDE: Main
      ============ */
-  /* line 508, ../scss/partials/_media-queries.scss */
+  /* line 705, ../scss/partials/_media-queries.scss */
   .main article {
     float: left;
     width: 57%;
   }
-  /* line 513, ../scss/partials/_media-queries.scss */
+  /* line 710, ../scss/partials/_media-queries.scss */
   .main aside {
     float: right;
     width: 28%;
@@ -709,7 +898,7 @@ nav ul li {
   /* ===============
       Maximal Width
      =============== */
-  /* line 526, ../scss/partials/_media-queries.scss */
+  /* line 723, ../scss/partials/_media-queries.scss */
   .wrapper {
     width: 1026px;
     /* 1140px - 10% for margins */
@@ -720,7 +909,7 @@ nav ul li {
    Print styles
    ========================================================================== */
 @media print {
-  /* line 537, ../scss/partials/_media-queries.scss */
+  /* line 734, ../scss/partials/_media-queries.scss */
   * {
     background: transparent !important;
     color: #000 !important;
@@ -729,18 +918,18 @@ nav ul li {
     text-shadow: none !important;
   }
 
-  /* line 544, ../scss/partials/_media-queries.scss */
+  /* line 741, ../scss/partials/_media-queries.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 549, ../scss/partials/_media-queries.scss */
+  /* line 746, ../scss/partials/_media-queries.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 553, ../scss/partials/_media-queries.scss */
+  /* line 750, ../scss/partials/_media-queries.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -748,33 +937,33 @@ nav ul li {
   /*
    * Don't show links for images, or javascript/internal links
    */
-  /* line 561, ../scss/partials/_media-queries.scss */
+  /* line 758, ../scss/partials/_media-queries.scss */
   .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
     content: "";
   }
 
-  /* line 567, ../scss/partials/_media-queries.scss */
+  /* line 764, ../scss/partials/_media-queries.scss */
   pre,
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
   }
 
-  /* line 573, ../scss/partials/_media-queries.scss */
+  /* line 770, ../scss/partials/_media-queries.scss */
   thead {
     display: table-header-group;
     /* h5bp.com/t */
   }
 
-  /* line 577, ../scss/partials/_media-queries.scss */
+  /* line 774, ../scss/partials/_media-queries.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 582, ../scss/partials/_media-queries.scss */
+  /* line 779, ../scss/partials/_media-queries.scss */
   img {
     max-width: 100% !important;
   }
@@ -782,7 +971,7 @@ nav ul li {
   @page {
     margin: 0.5cm;
   }
-  /* line 590, ../scss/partials/_media-queries.scss */
+  /* line 787, ../scss/partials/_media-queries.scss */
   p,
   h2,
   h3 {
@@ -790,7 +979,7 @@ nav ul li {
     widows: 3;
   }
 
-  /* line 597, ../scss/partials/_media-queries.scss */
+  /* line 794, ../scss/partials/_media-queries.scss */
   h2,
   h3 {
     page-break-after: avoid;
