--- a/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
@@ -267,6 +267,7 @@
         margin-top: -40%;
         background-image: url("../img/banner.png");
         background-size: 100%;
+        background-repeat: no-repeat;
     
         h1  {
             top: 100%;
@@ -389,7 +390,7 @@
                     top: 720px;
 
                     font-family: Arial;
-                    font-size: 90%;
+                    font-size: 70%;
                     line-height: normal;
         
                     color: #000000;
@@ -434,6 +435,202 @@
   }
 
   }
+
+  /* =====================
+   Desktop
+   ====================*/
+   @media only screen and (min-width : 1224px) {
+
+    header  {
+        background: #000000;
+        nav  {
+            height: 75px;
+            a  {
+                height: 5px;
+            }
+        }
+
+        
+
+    }
+
+    .main__block  {
+        margin-top: -36%;
+        width: 1280px;
+        height: 500px;
+        left: 0px;
+        top: 77px;
+        background-image: url("../img/banner.png");
+        background-size: 100%;
+        background-repeat: no-repeat;
+    
+        h1  {
+            top: 100%;
+            position: sticky;
+            margin-top: 33%;
+            margin-left: 10%;
+            width: 50%;
+            font-family: Arial;
+            font-size: 150%;
+            line-height: normal;
+            
+            color: white;   
+        }
+    
+    }
+
+    .search__block  {
+        position: absolute;
+        top: 150%;
+        margin-left: 10%;
+        width: 50%;
+        .search  {
+            text-indent: 15px;
+            background: #FFFFFF;
+            border: 1px solid #8E8E8E;
+            box-sizing: border-box;
+            border-radius: 20px;
+            width: 80%;
+            height: 5%;
+            left: 10%;
+            top: 65%;
+            font-family: Arial;
+            font-size: 18px;
+            line-height: normal;
+            color: #8E8E8E;
+        }
+
+        .image  {
+            position: absolute;
+            width: 23px;
+            height: 23px;
+            right: 50px;
+            top: 2%;
+            margin-right: 15%;
+        }
+     }
+
+    .agent__block  {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        margin-top: 2%;
+        .single__agent  {
+            background: #FFFFFF;  
+            margin-top: 9%;
+            .agent  {
+                /*font*/
+                margin-left: 5%;
+                font-family: Arial;
+                font-size: 18px;
+                line-height: normal;
+
+                /* borde-light */
+                border-bottom: 1px solid #D8D8D8;
+
+                .certified  {
+                    margin-left: 40%;
+                    left: 60%;
+                    right: 14.03%;
+                    top: 4.96%;
+                    bottom: 42.12%;
+                    border-bottom-color: #000000;
+                }
+            }
+
+
+            p  {
+                .image  {
+                    float: left;
+                    width: 126px;
+                    height: 167px;
+                }
+                margin-left: 10%;
+                width: 80%;
+                height: 50%;
+                left: 164px;
+                top: 583px;
+
+                font-family: Arial;
+                font-size: 95%;
+                line-height: normal;
+                text-align: justify;
+
+                color: #000000;
+
+            }
+
+            .footer__agent  {
+                display:flex;
+                margin-top: 5%;
+                .btn  {
+                    margin-left: 10%;
+                    margin-right: 15%;
+                    background: #000000;
+                    border-radius: 18px;
+                    width: 30%;
+                    left: 150%;
+                    top: 300%;
+                    font-family: Arial;
+                    font-size: 100%;
+                    line-height: normal;
+                    text-align: center;
+                    color: #FFFFFF;
+                }
+        
+                h2  {
+                    margin-left: 10%;
+                    margin-top: 5%;
+                    height: 17px;
+                    left: 23px;
+                    top: 720px;
+
+                    font-family: Arial;
+                    font-size: 70%;
+                    line-height: normal;
+        
+                    color: #000000;
+                }
+
+            }
+        }
+    }
+
+  .footer__block  {
+    margin-top: 10%;
+    width: 100%;
+    height: 88px;
+    left: 0px;
+    top: 1054px;
+    
+    background: #000000;
+    display: flex;
+
+      p  {
+        margin-left: 10%;
+        margin-top: 5%;
+        width: 50%;
+        top: 5%;
+        
+        font-family: Arial;
+        font-size: 70%;
+        line-height: normal;
+        color: #FFFFFF;   
+
+      }
+
+      h5  {
+        margin-left: 10%;
+        margin-top: 5%;
+        font-family: Arial;
+        font-size: 70%x;
+        line-height: normal;
+        text-decoration-line: underline;
+        color: #FFFFFF;
+      }
+  }
+
+  }
+
 
 
 
