--- a/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
@@ -465,7 +465,7 @@
         background-repeat: no-repeat;
     
         h1  {
-            top: 100%;
+            top: 60px;
             position: sticky;
             margin-top: 33%;
             margin-left: 10%;
@@ -473,8 +473,7 @@
             font-family: Arial;
             font-size: 150%;
             line-height: normal;
-            
-            color: white;   
+            color: white;  
         }
     
     }
