Mobile responsive completed

--- a/SCSS/Run Forest Run/app/scss/partials/_general.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_general.scss
@@ -18,8 +18,7 @@
     ALL: Fonts
    =================== */
 @font-face {
-   font-family: 'IntelligentSense';
-   src: url('../fonts/tgl-31034-1-normschrift.ttf') format('truetype');
+   font-family: Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-style: normal;
 }
